Update build scripts for local development and revise legal content. Enhanced the Privacy Policy section while removing the outdated Terms and Conditions. Adjusted pricing plan descriptions and features for clarity and consistency. Updated links in the global settings and marketing layout to reflect the new structure.

--- a/content/legal/Privacy-Policy.mdx
+++ b/content/legal/Privacy-Policy.mdx
@@ -2,30 +2,25 @@
 title: Privacy Policy
 lastUpdated: 2026-01-25T00:00:00.000Z
 seo:
-  title: Terms of Service - WaitQ
+  title: Privacy Policy - WaitQ
   description: >-
-    Read the WaitQ Terms of Service and Privacy Policy. Learn about your rights
-    and responsibilities when using our restaurant waitlist management software.
+    Learn how WaitQ collects, uses, and protects your information when using our
+    restaurant waitlist management software.
 ---
 
-## Terms of Service
+## Privacy Policy
 
-These terms are a placeholder and will be updated.
+This privacy policy is a placeholder and will be updated.
 
-By using WaitQ, you agree to our standard terms of service and privacy practices.
+### 1. What we collect
 
-### 1. Acceptance of Terms
+We may collect contact information (such as name, phone number, and email) when it is provided to join a waitlist.
 
-By accessing or using WaitQ, you agree to be bound by these Terms of Service and all applicable laws and regulations.
+### 2. How we use it
 
-### 2. Use of Service
+We use this information to operate the waitlist service (for example, sending notifications and showing status pages).
 
-WaitQ provides waitlist management software for businesses. You agree to use the service only for lawful purposes and in accordance with these terms.
+### 3. Contact
 
-### 3. Privacy
+Contact us for any questions at [support@waitq.app](mailto:support@waitq.app).
 
-Your privacy is important to us. Please review our Privacy Policy to understand how we collect, use, and protect your information.
-
-### 4. Contact
-
-Contact us for any questions at [support@waitq.app](mailto\:support@waitq.app).
