Refactor blog category handling to support new object structure in TinaCMS. Update blog article and index components to accommodate changes in category data format. Enhance metadata generation to reflect updated category structure.

--- a/content/blog/introducing-waitq.mdx
+++ b/content/blog/introducing-waitq.mdx
@@ -8,11 +8,7 @@ excerpt: >-
 author: WaitQ Team
 featuredImage: /images/About WaitQ.webp
 categories:
-  - Product
-tags:
-  - waitlist
-  - restaurants
-  - queue-management
+  - category: content/blog-categories/product.json
 seo:
   slug: introducing-waitq
   indexable: true
