--- a/content/blog/how-to-improve-guest-waiting-experience-in-restaurants-10-proven-strategies.mdx
+++ b/content/blog/how-to-improve-guest-waiting-experience-in-restaurants-10-proven-strategies.mdx
@@ -4,7 +4,7 @@ draft: true
 publishedAt: 2026-02-06T20:46:40.509Z
 excerpt: ''
 categories:
-  - Customer experience
+  - category: content/blog-categories/customer-experience.json
 seo:
   slug: improve-guest-waiting-experience-strategies
 ---
